2008-04-04

  Added "addkinsoku" and "setkinsoku" commands [Mion]
  Reworked text processing to allow a mix of 1-byte & 2-byte chars,
  use better English space-based linebreaking and Japanese kinsoku-based
  linebreaking. [Mion]


2008-03-29

  Add filename-based language selection: if the executable is named
  "onscripter-en" (or "ONScripter-En", "onscripter_english", etc), it
  will use English mode by default. [Haeleth]


2008-03-22

  Implement clickskippage, and also add a debugprint command that
  dumps its parameters to stdout for convenient printf-style
  debugging. [Haeleth]

  Add a rudimentary test suite; this is far from complete, but will
  hopefully help a bit in making sure future updates don't break
  anything. [Haeleth]

  Replace the FORCE_1BYTE_CHAR compile-time option with a runtime
  "language" command.  Use "language english" to get the current
  behaviour, or pass ONScripter-En the "--english" command-line
  flag. [Haeleth]


2008-03-09

  Fix MPEG playback for movies with audio sampled at other than
  44100Hz. [Mion]

  Updated music playing code to be more in line with Ogapee's latest
  release. [Mion]

  Added save file version 2.05. [Mion]


2008-03-05

  Support added for extended sprite commands (lsp2, msp2, etc), and
  improved screenshot support (screenshot, deletescreenshot). [Mion]


2008-02-12

  Support NBZ files within SAR archives, and fix the xcode
  project. [Roine]


2008-01-03

  Numerous patches [Mion]: 
    * Fix bugs in prnum
    * Remove extra newlines in built-in save/load menus
    * Modify skip-to-wait mode to fix Higurashi problems
    * Allow multiple archive paths, to facilitate distributing patches
    * Fix intermittent crashes with multicore processors
    * Fix input breakage in auto mode

    
2007-11-11

  Simplify handling of the click-wait enum.

  Temporarily disable skip_to_wait; there's breakage somewhere that's
  causing nasty side-effects in Higurashi.


2007-07-20
